.metadata/.plugins/org.eclipse.cdt.ui/1967.build.log
19:15:51 **** Incremental Build of configuration Debug for project 1967 ****
make all 
Building file: ../src/1967.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/1967.d" -MT"src/1967.o" -o "src/1967.o" "../src/1967.cpp"
../src/1967.cpp:55:20: error: no member named 'push' in 'std::__1::vector<int, std::__1::allocator<int> >'
        inp[cnt++].push
        ~~~~~~~~~~ ^
1 error generated.
make: *** [src/1967.o] Error 1

19:15:51 Build Finished (took 396ms)

